<resources>
    <string name="app_name">URIRANG</string>
    <string name="loading">로딩중&#8230;</string>
    <string name="mbti">MBTI</string>
    <string name="response_empty_body">서버 응답문제</string>
    <string name="network_connect_failure">서버연결 실패</string>
    <string name="kakao_app_key">209ef9ac93dbc645f4b5160b6d3eb4fc</string>
    <string name="splash_description">SPLASH</string>
    <string name="social_login_description">SOCIAL</string>
    <string name="social_login_tv_top_1">뭐하고 있어,</string>
    <string name="social_login_tv_top_2">우리랑 </string>
    <string name="social_login_tv_top_3">놀자!</string>
    <string name="social_login_tv_top_4">로 지지고 볶는</string>
    <string name="social_login_tv_top_5">우리들만의</string>
    <string name="social_login_tv_top_6">커뮤니티</string>
    <string name="social_login_tv_email_login">이메일로 로그인</string>
    <string name="social_login_tv_kakao_login">카카오톡으로 로그인</string>
    <string name="social_login_tv_use_anonymous">비회원으로 둘러보기</string>
    <string name="social_login_tv_sign_up">회원가입</string>
    <string name="info_description">MBTIINFO</string>
    <string name="info_tv_complete">완료</string>
    <string name="info_tv_word_nickname">닉네임</string>
    <string name="info_tv_and">과\u0020</string>
    <string name="info_tv_suffix">를</string>
    <string name="info_tv_word_let_me_know">알려줘!</string>
    <string name="info_tv_word_no_mbti">아직도 유형을 모른다고?</string>
    <string name="info_tv_word_go_test">테스트 하러가기</string>
    <string name="info_toast_nickname">닉네임을 입력해 주세요</string>
    <string name="info_toast_mbti">MBTI를 선택해 주세요</string>
    <string name="email_login_tv_word_email">이메일</string>
    <string name="email_login_tv_word_suffix">로</string>
    <string name="email_login_tv_word_login">로그인해볼까?</string>
    <string name="email_login_hint_password">비밀번호</string>
    <string name="email_login_tv_find_password"><u>비밀번호 찾기</u></string>
    <string name="email_login_tv_login">로그인</string>
    <string name="signup_description">SIGNUP</string>
    <string name="signup_tv_hi">안녕!</string>
    <string name="signup_tv_who_are_you">네가 누구라고?</string>
    <string name="signup_tv_next">다음</string>
    <string name="signup_tv_password_check">비밀번호 확인</string>
    <string name="signup_tv_validate_email">사용 가능한 이메일입니다</string>
    <string name="signup_tv_validate_password">사용 가능한 비밀번호입니다.</string>
    <string name="signup_toast_pass_invalid_format">비밀번호는 영문 소,대문자와 특수문자(선택)의 조합입니다</string>
    <string name="signup_toast_pass_check">비밀번호가 일치하지 않습니다</string>
    <string name="signup_toast_email_reg">이메일 형식이 올바르지 않습니다</string>
    <string name="find_password_description">FIND</string>
    <string name="find_password_tv_check">확인</string>
    <string name="find_password_tv_word_what">이런!</string>
    <string name="find_password_tv_word_forgot_password">를 잊었다고?</string>
    <string name="find_password_hint_email_address">이메일 주소</string>
    <string name="find_password_complete_tv_dont_worry">이제 걱정마!</string>
    <string name="find_password_complete_tv_mail_box">메일함</string>
    <string name="find_password_complete_tv_check_mail_box">을 확인해봐.</string>
    <string name="find_password_complete_tv_send_to_email">입력한 메일 주소로 초기화된 비밀번호를 보냈어요.</string>
    <string name="find_password_complete_tv_go_init">처음으로</string>
    <string name="main_description">MAIN</string>
    <string name="home_description">HOME</string>
    <string name="home_tv_app_bar_tv_extra">어떤캐릭터라고 생각해?</string>
    <string name="home_tv_app_bar_tv_suffix">는</string>
    <string name="home_tv_go_world_cup">월드컵 하러가기</string>
    <string name="home_tv_best_article">베스트 게시글</string>
    <string name="home_tv_popular_article">모두랑 인기 게시물</string>
    <string name="home_tv_other_test">각종 테스트 \u2022 검사 추천</string>
    <string name="home_tv_other_test_wording">이런 테스트는 어때?</string>
    <string name="home_tv_relative_contents">MBTI 관련 컨텐츠</string>
    <string name="home_tv_relative_contents_wording">아마 이것도 좋아할걸!</string>
    <string name="home_tv_with_you">너희랑</string>
    <string name="home_tv_hall_of_fame">명예의 전당</string>
    <string name="home_tv_hall_of_fame_wording">이전 토픽 다시보기</string>
    <string name="home_tv_how_about_this_wording">직접 추천해보는\n너희랑 토픽</string>
    <string name="hall_of_fame_description">HALLOFFAME</string>
    <string name="hall_of_fame">명예의 전당</string>
    <string name="hall_of_fame_tv_filter_by_created">최신순</string>
    <string name="hall_of_fame_tv_filter_by_popularity">인기순</string>
    <string name="hall_of_fame_tv_comment">코멘트</string>
    <string name="hall_of_fame_tv_previous_topic">이전 토픽</string>
    <string name="board_description">BOARD</string>
    <string name="board">게시판</string>
    <string name="board_tv_search">검색</string>
    <string name="board_with_you_tv_mbti_filtering">MBTI 필터링</string>
    <string name="board_tv_view_wording">조회</string>
    <string name="with_you">WITHYOU</string>
    <string name="with_you_tv_topic">토픽</string>
    <string name="with_you_tv_comment">코멘트</string>
    <string name="with_you_comment_tv_mbti_filtering">MBTI 필터링</string>
    <string name="with_you_tv_write_comment">댓글달기</string>
    <string name="with_you_tv_write_comment_anonymous">익명</string>
    <string name="with_you_tv_comment_hint_new_opinion">새 의견을 남겨보세요.</string>
    <string name="with_all_write">글 쓰기</string>
    <string name="with_all_write_hint_title">글 제목</string>
    <string name="with_all_write_edt_hint">내용을 입력해줘</string>
    <string name="with_all_write_total_image">/4</string>
    <string name="file_provider">이미지를 선택해 주세요</string>
    <string name="pick_multi_limit">모두 선택하였습니다</string>
    <string name="with_all_comment_tv_top">모두랑</string>
    <string name="with_all_description">WITHALL</string>
    <string name="with_all_content_tv_comment">댓글</string>
    <string name="with_all_content_hint_edt">댓글을 입력해 주세요</string>
    <string name="mbti_filter_description">MBTI_FILTERING</string>
    <string name="mbti_filter">성격유형 필터링</string>
    <string name="mbti_filter_tv_apply">필터링 적용</string>
    <string name="search_description">SEARCH</string>
    <string name="search">검색</string>
    <string name="search_edt_hint">검색어 입력</string>
    <string name="notice">알림</string>
    <string name="notice_tv_empty">등록된 알림이 없어요!</string>
    <string name="how_about_this">HOWABOUTTHIS</string>
    <string name="how_about_this_tv_top">이건 어때</string>
    <string name="how_about_this_1">1</string>
    <string name="how_about_this_2">2</string>
    <string name="how_about_this_3">3</string>
    <string name="how_about_this_tv_filter_created_at">최신순</string>
    <string name="how_about_this_tv_filter_popularity">인기순</string>
    <string name="how_about_this_tv_like">추천</string>
    <string name="how_about_this_write">토픽 쓰기</string>
    <string name="how_about_this_write_tv_register">등록</string>
    <string name="how_about_this_write_hint_topic_title">토픽 제목</string>
    <string name="how_about_this_write_hint_tv_guide">* 메인 이미지로 사용될 사진을 등록해줘!</string>
    <string name="world_cup">월드컵</string>
    <string name="world_cup_tv_ready">가까운 시일내에 업데이트됩니다!</string>
    <string name="world_cup_tv_popular">인기 월드컵</string>
    <string name="world_cup_middle_dot">\u2022</string>
    <string name="world_cup_tv_participate">참여</string>
    <string name="world_cup_tv_1">1위</string>
    <string name="world_cup_tv_2">2위</string>
    <string name="world_cup_tv_3">3위</string>
    <string name="world_cup_tv_write_next">다음</string>
    <string name="world_cup_tv_write_world_cup">월드컵 만들기</string>
    <string name="world_cup_tv_write_num_of_round">몇 강으로 만들어 볼까요?</string>
    <string name="world_cup_tv_write_num_of_round_32">32강</string>
    <string name="world_cup_tv_write_num_of_round_16">16강</string>
    <string name="world_cup_tv_write_num_of_round_8">8강</string>
    <string name="world_cup_tv_write_num_of_round_4">4강</string>
    <string name="world_cup_tv_write_num_of_round_1">결승</string>
    <string name="world_cup_tv_write_title_description">월드컵 제목과 설명을 입력해 주세요.</string>
    <string name="world_cup_tv_write_title_hint">제목</string>
    <string name="world_cup_tv_write_description_hint">50자 이내로 설명을 입력해 주세요.</string>
    <string name="world_cup_tv_write_register_candidates">후보를 등록해 주세요.</string>
    <string name="world_cup_tv_write_random_matching_wording">*월드컵 후보 매칭은 랜덤으로 이뤄져!</string>
    <string name="world_cup_tv_content_start">시작하기</string>
    <string name="world_cup_tv_content_restart">다시하기</string>
    <string name="world_cup_tv_content_vs">VS</string>
    <string name="world_cup_tv_result_percent_wording">가 같은 후보를 선택했어!</string>
    <string name="world_cup_tv_result_go_all">전체 결과 보기</string>
    <string name="world_cup_tv_all_result_top">결과 보기</string>
    <string name="world_cup_tv_all_result_wording">내 월드컵 결과</string>
    <string name="world_cup_tv_all_result_my_mbti_wording">나와 같은 유형 결과</string>
    <string name="world_cup_tv_all_result">전체 랭킹</string>
    <string name="world_cup_tv_all_result_go_with_all">모두랑으로 떠들러가기</string>
    <string name="world_cup_candidate_tv_1">1</string>
    <string name="world_cup_candidate_tv_2">2</string>
    <string name="world_cup_candidate_tv_3">3</string>
    <string name="world_cup_candidate_tv_4">4</string>
    <string name="world_cup_candidate_tv_5">5</string>
    <string name="world_cup_candidate_tv_6">6</string>
    <string name="world_cup_candidate_tv_7">7</string>
    <string name="world_cup_candidate_tv_8">8</string>
    <string name="world_cup_candidate_tv_9">9</string>
    <string name="world_cup_candidate_tv_10">10</string>
    <string name="world_cup_candidate_tv_11">11</string>
    <string name="world_cup_candidate_tv_12">12</string>
    <string name="world_cup_candidate_tv_13">13</string>
    <string name="world_cup_candidate_tv_14">14</string>
    <string name="world_cup_candidate_tv_15">15</string>
    <string name="world_cup_candidate_tv_16">16</string>
    <string name="world_cup_candidate_tv_17">17</string>
    <string name="world_cup_candidate_tv_18">18</string>
    <string name="world_cup_candidate_tv_19">19</string>
    <string name="world_cup_candidate_tv_20">20</string>
    <string name="world_cup_candidate_tv_21">21</string>
    <string name="world_cup_candidate_tv_22">22</string>
    <string name="world_cup_candidate_tv_23">23</string>
    <string name="world_cup_candidate_tv_24">24</string>
    <string name="world_cup_candidate_tv_25">25</string>
    <string name="world_cup_candidate_tv_26">26</string>
    <string name="world_cup_candidate_tv_27">27</string>
    <string name="world_cup_candidate_tv_28">28</string>
    <string name="world_cup_candidate_tv_29">29</string>
    <string name="world_cup_candidate_tv_30">30</string>
    <string name="world_cup_candidate_tv_31">31</string>
    <string name="world_cup_candidate_tv_32">32</string>
    <string name="world_cup_candidate_edt_hint">후보 입력</string>
    <string name="my_page">MYPAGE</string>
    <string name="my_page_tv_modify_profile">프로필 수정</string>
    <string name="my_page_tv_edit_test_result">편집</string>
    <string name="my_page_tv_my_test_results">검사 유형 모아보기</string>
    <string name="my_page_tv_my_posts">내가 쓴 글</string>
    <string name="my_page_tv_my_commented_posts">댓글 단 글</string>
    <string name="my_page_no_input_result">입력한 테스트 결과가 없습니다</string>
    <string name="my_page_tv_license">라이센스</string>
    <string name="test_results">검사 유형 모아보기</string>
    <string name="test_results_aniagram">에니어그램</string>
    <string name="test_results_egogram">에고그램</string>
    <string name="test_results_mgram">MGRAM</string>
    <string name="test_results_big_five">빅파이브</string>
    <string name="test_results_love_type">성인 애착 유형</string>
    <string name="test_results_add_available">추가 가능</string>
    <string name="test_results_tv_modify">수정</string>
    <string name="test_results_tv_add">추가</string>
    <string name="test_results_write_hint">검사결과</string>
    <string name="test_results_write_tv_result">결과 유형</string>
    <string name="test_results_tv_images">결과 사진</string>
</resources>