<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/social_login_linear_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login_tv_top_1"
            android:textColor="@android:color/white"
            android:textSize="37sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_login_tv_top_2"
                android:textColor="@android:color/white"
                android:textSize="37sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/social_login_tv_top_3"
                android:textColor="@android:color/white"
                android:textSize="37sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_login_linear_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/social_login_linear_top"
        app:layout_constraintTop_toBottomOf="@+id/social_login_linear_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbti"
                android:textColor="@android:color/white"
                android:textSize="10.5sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_login_tv_top_4"
                android:textColor="@android:color/white"
                android:textSize="10.5sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_login_tv_top_5"
                android:textColor="@android:color/white"
                android:textSize="10.5sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/social_login_tv_top_6"
                android:textColor="@android:color/white"
                android:textSize="10.5sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/social_login_iv_mbti"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/social_login_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_mbti_logo"
        app:layout_constraintDimensionRatio="360:233"
        app:layout_constraintTop_toBottomOf="@+id/social_login_linear_center" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_login_iv_mbti">

        <TextView
            android:id="@+id/social_login_tv_go_email_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/src_social_login_btn"
            android:gravity="center"
            android:onClick="socialLoginOnclick"
            android:text="@string/social_login_tv_email_login"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="264:38"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/social_login_relative_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/src_social_login_btn"
            android:onClick="socialLoginOnclick"
            app:layout_constraintDimensionRatio="264:38"
            app:layout_constraintTop_toBottomOf="@+id/social_login_tv_go_email_login">

            <TextView
                android:id="@+id/social_login_tv_kakao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/social_login_tv_kakao_login"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/social_login_tv_kakao"
                android:contentDescription="@string/social_login_description"
                android:src="@drawable/ic_kakao" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/social_login_relative_bottom">

            <TextView
                android:id="@+id/social_login_tv_use_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="socialLoginOnclick"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:text="@string/social_login_tv_use_anonymous"
                android:textColor="@android:color/white"
                android:textSize="11.5sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/social_login_tv_use_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="socialLoginOnclick"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:text="@string/social_login_tv_sign_up"
                android:textColor="@android:color/white"
                android:textSize="11.5sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>