<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/find_password_complete_tv_no_worry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="73dp"
        android:lineSpacingExtra="19sp"
        android:text="@string/find_password_complete_tv_dont_worry"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/find_password_complete_tv_mail_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="19sp"
        android:text="@string/find_password_complete_tv_mail_box"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/find_password_complete_tv_no_worry"
        app:layout_constraintTop_toBottomOf="@+id/find_password_complete_tv_no_worry" />

    <TextView
        android:id="@+id/find_password_complete_tv_check_mail_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="19sp"
        android:text="@string/find_password_complete_tv_check_mail_box"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/find_password_complete_tv_mail_box"
        app:layout_constraintTop_toBottomOf="@+id/find_password_complete_tv_no_worry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:letterSpacing="0.06"
        android:text="@string/find_password_complete_tv_send_to_email"
        android:textColor="@android:color/black"
        android:textSize="11.5sp"
        app:layout_constraintStart_toStartOf="@+id/find_password_complete_tv_mail_box"
        app:layout_constraintTop_toBottomOf="@+id/find_password_complete_tv_mail_box" />

    <TextView
        android:id="@+id/find_password_complete_tv_go_init"
        android:layout_width="156dp"
        android:layout_height="0dp"
        android:layout_marginBottom="141dp"
        android:background="@drawable/src_login"
        android:gravity="center"
        android:onClick="findPasswordCompleteOnClick"
        android:text="@string/find_password_complete_tv_go_init"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="156:38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>