<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/find_password_linear_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/find_password_back_arrow"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:contentDescription="@string/find_password_description"
            android:onClick="findPasswordOnClick"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_back_arrow" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/find_password_tv_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/colorInfoTvComplete"
            android:text="@string/find_password_tv_check"
            android:textStyle="bold"
            android:paddingEnd="19dp"
            android:onClick="findPasswordOnClick"
            android:paddingStart="19dp"
            android:gravity="center"
            />

    </LinearLayout>

    <View
        android:id="@+id/find_password_view_border"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorInfoBorder"
        app:layout_constraintTop_toBottomOf="@+id/find_password_linear_top" />

    <TextView
        android:id="@+id/find_password_tv_what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="19sp"
        android:text="@string/find_password_tv_word_what"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_password_view_border" />

    <TextView
        android:id="@+id/find_password_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="19sp"
        android:text="@string/email_login_hint_password"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/find_password_tv_what"
        app:layout_constraintTop_toBottomOf="@+id/find_password_tv_what" />

    <TextView
        android:id="@+id/find_password_tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="19sp"
        android:text="@string/find_password_tv_word_forgot_password"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/find_password_tv_password"
        app:layout_constraintTop_toBottomOf="@+id/find_password_tv_what" />

    <EditText
        android:id="@+id/find_password_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:background="@null"
        android:hint="@string/find_password_hint_email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/colorInfoNickname"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/find_password_tv_password" />

    <View
        android:id="@+id/find_password_view_email"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:background="@color/colorInfoView"
        app:layout_constraintTop_toBottomOf="@+id/find_password_edt_email" />

</androidx.constraintlayout.widget.ConstraintLayout>